# wagonmonitor-

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cf2818b57a94_initial_companies_users_user_role_enum.py
backend/app/: cli.py  config.py  database.py  deps.py  main.py  security.py
backend/app/auth/application/: handlers.py  views.py
backend/app/auth/entrypoints/: views.py
backend/app/companies/application/: handlers.py  views.py
backend/app/companies/domain/: models.py
backend/app/companies/entrypoints/: views.py
backend/app/entrypoints/: cli.py  dependencies.py
backend/app/entrypoints/schemas/: auth.py  companies.py  ingestion.py  tracking.py  users.py
backend/app/entrypoints/web/: app.py
backend/app/groups/domain/: models.py
backend/app/ingestion/application/: handlers.py
backend/app/ingestion/entrypoints/: views.py
backend/app/models/: __init__.py  base.py  company.py  user.py
backend/app/routers/: auth.py
backend/app/schemas/: auth.py
backend/app/shared/: security.py
backend/app/shared/contrib/: config.py
backend/app/shared/database/: enums.py  session.py
backend/app/tracking/application/: handlers.py
backend/app/tracking/domain/: models.py
backend/app/tracking/entrypoints/: views.py
backend/app/users/application/: handlers.py  views.py
backend/app/users/domain/: models.py
backend/app/users/entrypoints/: views.py
backend/app/wagons/application/: views.py
backend/app/wagons/domain/: models.py
backend/app/wagons/entrypoints/: views.py
backend/migrations/: env.py
backend/migrations/versions/: 850dceeb9555_wagons_groups_tracking_assignments.py  b80605cd35d4_initial_companies_users_user_role_enum.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: admin.ts  auth.ts  client.ts  dislocations.ts  tracking.ts
frontend/src/auth/: storage.ts  useAuth.tsx
frontend/src/components/: AdminLayout.tsx  AssignTrackingModal.tsx  KebabMenu.tsx  Modal.tsx
frontend/src/pages/: Companies.tsx  Dislocation.tsx  Home.tsx  Login.tsx  Users.tsx
frontend/src/routes/: RequireAuth.tsx
